--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@grafana/runtime": "^7.3.6",
     "@types/cytoscape": "^3.8.5",
     "cytoscape": "^3.14.2",
     "cytoscape-canvas": "^3.0.1",
@@ -45,6 +46,7 @@
     "human-format": "^0.10.1",
     "lodash": "^4.17.19",
     "moment": "^2.25.3",
+    "node-fetch": "^2.6.1",
     "typescript": "^3.1.6"
   },
   "babel": {
